--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <h2 class="text-uppercase" style="letter-spacing: 5px;">Ahmad Alomari</h2> <!---->
                         <p class="lead">Software Developer</p>
                         <div class="cta-buttons" data-aos="fade-up" data-aos-delay="300">
-                            <a href="assets/certifications/Ahmad_Al-Omari_Latest_CV.pdf" target="_blank" download="true" class="btn btn-primary">Download Resume</a>
+                            <a href="assets/certifications/Ahmad_Al-Omari_Latest_CV.pdf" target="_blank" download="Ahmad Alomari Resume" class="btn btn-primary">Download Resume</a>
                             <!--<a href="#contact" class="btn btn-outline">Let's Connect</a>-->
                         </div>
                         <div class="hero-stats" data-aos="fade-up" data-aos-delay="400">
