--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="">
 
     <!-- Favicons -->
-    <link href="assets/img/cropped-selfie.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/img/cropped-selfie.png" rel="logo">
+    <link href="assets/img/cropped-selfie.png" rel="logo">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -78,7 +78,6 @@
                         <p class="lead">Software Developer</p>
                         <div class="cta-buttons" data-aos="fade-up" data-aos-delay="300">
                             <a href="assets/certifications/Ahmad_Al-Omari_Latest_CV.pdf" target="_blank" download="Ahmad Alomari Resume" class="btn btn-primary">Download Resume</a>
-                            <!--<a href="#contact" class="btn btn-outline">Let's Connect</a>-->
                         </div>
                         <div class="hero-stats" data-aos="fade-up" data-aos-delay="400">
                             <div class="stat-item">
@@ -97,7 +96,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="hero-image">
-                            <img src="assets/img/profile/4401280.png" alt="Portfolio Hero Image" class="img-fluid" data-aos="zoom-out" data-aos-delay="300">
+                            <img src="assets/img/4401280.png" alt="Portfolio Hero Image" class="img-fluid" data-aos="zoom-out" data-aos-delay="300">
                             <div class="shape-1"></div>
                             <div class="shape-2"></div>
                         </div>
@@ -123,7 +122,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 position-relative" data-aos="fade-right" data-aos-delay="200">
                         <div class="about-image">
-                            <img src="assets/img/profile/selfie.jpg" alt="Profile Image" class="img-fluid rounded-4">
+                            <img src="assets/img/selfie.jpg" alt="Profile Image" class="img-fluid rounded-4">
                         </div>
                     </div>
 
@@ -653,46 +652,6 @@
                     </div>
                 </div>
 
-                <!--<div class="col-lg-6">
-        <div class="contact-form card" data-aos="fade-up" data-aos-delay="300">
-            <div class="card-body p-4 p-lg-5">
-
-                <form action="forms/contact.php" method="post" class="php-email-form">
-                    <div class="row gy-4">
-
-                        <div class="col-12">
-                            <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                        </div>
-
-                        <div class="col-12 ">
-                            <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                        </div>
-
-                        <div class="col-12">
-                            <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                        </div>
-
-                        <div class="col-12">
-                            <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                        </div>
-
-                        <div class="col-12 text-center">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                            <button type="submit" class="btn btn-submit w-100">Submit Message</button>
-                        </div>
-
-                    </div>
-                </form>
-
-            </div>
-        </div>
-    </div>-->
-
-
-
             </div>
 
         </section><!-- /Contact Section -->
@@ -720,11 +679,9 @@
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
