--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="">
 
     <!-- Favicons -->
-    <link href="assets/img/cropped-selfie.png" rel="logo">
-
+    <link href="assets/img/cropped-selfie.png" rel="icon">
+    <link href="assets/img/cropped-selfie.png" rel="apple-touch-icon">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
