--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 
         <div class="container">
             <div class="copyright text-center ">
-                <p>© <span>Copyright</span> <strong class="px-1 sitename">Ahmad Alomari</strong> <span>All Rights Reserved</span></p>
+                <p>© <span>Copyright</span> <strong class="px-1">Ahmad Alomari</strong> <span>All Rights Reserved</span></p>
             </div>
             <div class="social-links d-flex justify-content-center">
                 <a href="https://www.linkedin.com/in/ahmadomari98/" target="_blank"><i class="bi bi-linkedin"></i></a>
