--- a/index.html
+++ b/index.html
@@ -695,6 +695,9 @@
         <a href="https://info.flagcounter.com/qylt">
             <img src="https://s01.flagcounter.com/count/qylt/bg_FFFFFF/txt_000000/border_CCCCCC/columns_3/maxflags_6/viewers_0/labels_0/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0">
         </a>
+<a href="https://localhost:4200/09544c5b-1d5c-430d-8fff-f574ddf6de97" target="_blank">
+  <img src="https://localhost:8200/api/Sites/track/09544c5b-1d5c-430d-8fff-f574ddf6de97" />
+</a>
     </div>
 
     
