--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             </nav>
 
             <div class="header-social-links">
-                <a href="https://www.linkedin.com/in/ahmadomari98/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/ahmadomari98/" target="_blank" class="linkedin">
+                    <i class="bi bi-linkedin"></i>
+                </a>
             </div>
 
         </div>
@@ -144,14 +146,22 @@
                                     <div class="col-6">
                                         <div class="info-item">
                                             <span class="label">Phone</span>
-                                            <span class="value">+962790061201</span>
+                                            <span class="value">
+                                                <a href="tel:+962790061201" target="_blank">
+                                                    +962790061201
+                                                </a>
+                                            </span>
                                         </div>
                                     </div>
 
                                     <div class="col-6">
                                         <div class="info-item">
                                             <span class="label">Email</span>
-                                            <span class="value">AhmOmari@outlook.com</span>
+                                            <span class="value">
+                                                <a href="mailto:AhmOmari@outlook.com?subject=Mail From My Portfolio - Write Your Subject Here...!&body=Write your message here...!" target="_blank">
+                                                    AhmOmari@outlook.com
+                                                </a>
+                                            </span>
                                         </div>
                                     </div>
 
@@ -172,7 +182,9 @@
                                     <div class="col-6">
                                         <div class="info-item">
                                             <span class="label">Linkedin Profile - URL</span>
-                                            <a href="https://www.linkedin.com/in/ahmadomari98/" target="_blank">https://www.linkedin.com/in/ahmadomari98/</a>
+                                            <a href="https://www.linkedin.com/in/ahmadomari98/" target="_blank">
+                                                https://www.linkedin.com/in/ahmadomari98/
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -743,17 +755,27 @@
 
                         <div class="info-item d-flex mb-3">
                             <i class="bi bi-linkedin me-3"></i>
-                            <a href="https://www.linkedin.com/in/ahmadomari98/" target="_blank">https://www.linkedin.com/in/ahmadomari98/</a>
+                            <a href="https://www.linkedin.com/in/ahmadomari98/" target="_blank">
+                                https://www.linkedin.com/in/ahmadomari98/
+                            </a>
                         </div>
 
                         <div class="info-item d-flex mb-3">
                             <i class="bi bi-envelope-at me-3"></i>
-                            <span>AhmOmari@outlook.com</span>
+                            <span>
+                                <a href="mailto:AhmOmari@outlook.com?subject=Mail From My Portfolio - Write Your Subject Here...!&body=Write your message here...!" target="_blank">
+                                    AhmOmari@outlook.com
+                                </a>
+                            </span>
                         </div>
 
                         <div class="info-item d-flex mb-3">
                             <i class="bi bi-telephone me-3"></i>
-                            <span>+962790061201</span>
+                            <span>
+                                <a href="tel:+962790061201" target="_blank">
+                                    +962790061201
+                                </a>
+                            </span>
                         </div>
 
                         <div class="info-item d-flex mb-3">
@@ -777,7 +799,9 @@
                 <p>© <span>Copyright</span> <strong class="px-1">Ahmad Alomari</strong> <span>All Rights Reserved</span></p>
             </div>
             <div class="social-links d-flex justify-content-center">
-                <a href="https://www.linkedin.com/in/ahmadomari98/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/ahmadomari98/" target="_blank">
+                    <i class="bi bi-linkedin"></i>
+                </a>
             </div>
             <div class="credits">
                 Designed & Developed by <b>Ahmad Alomari</b>
