--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                         <div class="info-item">
                                             <span class="label">Phone</span>
                                             <span class="value">
-                                                <a href="tel:+962790061201" target="_blank">
+                                                <a href="tel:+962790061201">
                                                     +962790061201
                                                 </a>
                                             </span>
@@ -158,7 +158,7 @@
                                         <div class="info-item">
                                             <span class="label">Email</span>
                                             <span class="value">
-                                                <a href="mailto:AhmOmari@outlook.com?subject=Mail From My Portfolio - Write Your Subject Here...!&body=Write your message here...!" target="_blank">
+                                                <a href="mailto:AhmOmari@outlook.com?subject=Mail From My Portfolio - Write Your Subject Here...!&body=Write your message here...!">
                                                     AhmOmari@outlook.com
                                                 </a>
                                             </span>
@@ -763,7 +763,7 @@
                         <div class="info-item d-flex mb-3">
                             <i class="bi bi-envelope-at me-3"></i>
                             <span>
-                                <a href="mailto:AhmOmari@outlook.com?subject=Mail From My Portfolio - Write Your Subject Here...!&body=Write your message here...!" target="_blank">
+                                <a href="mailto:AhmOmari@outlook.com?subject=Mail From My Portfolio - Write Your Subject Here...!&body=Write your message here...!">
                                     AhmOmari@outlook.com
                                 </a>
                             </span>
@@ -772,7 +772,7 @@
                         <div class="info-item d-flex mb-3">
                             <i class="bi bi-telephone me-3"></i>
                             <span>
-                                <a href="tel:+962790061201" target="_blank">
+                                <a href="tel:+962790061201">
                                     +962790061201
                                 </a>
                             </span>
